# ChangeLog for dev-ruby/actionmailer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionmailer/ChangeLog,v 1.106 2009/07/22 06:54:22 graaff Exp $

*actionmailer-2.3.3 (22 Jul 2009)

  22 Jul 2009; Hans de Graaff <graaff@gentoo.org>
  +actionmailer-2.3.3.ebuild:
  Version bump for Rails 2.3.3. No actual changes.

  28 May 2009; Raúl Porcel <armin76@gentoo.org> actionmailer-2.3.2.ebuild:
  ia64 stable wrt #270331

  24 May 2009; Markus Meier <maekke@gentoo.org> actionmailer-2.3.2.ebuild:
  x86 stable, bug #270331

  23 May 2009; Thomas Anderson <gentoofan23@gentoo.org>
  actionmailer-2.3.2.ebuild:
  stable amd64, bug 270331

  23 May 2009; Brent Baude <ranger@gentoo.org> actionmailer-2.3.2.ebuild:
  Marking actionmailer-2.3.2 ppc64 stable for bug 270331

  23 May 2009; Brent Baude <ranger@gentoo.org> actionmailer-2.3.2.ebuild:
  Marking actionmailer-2.3.2 ppc stable for bug 270331

  18 May 2009; Ferris McCormick <fmccor@gentoo.org>
  actionmailer-2.3.2.ebuild:
  Sparc stable, Bug #270331.

*actionmailer-2.3.2 (17 Mar 2009)

  17 Mar 2009; Alex Legler <a3li@gentoo.org> +actionmailer-2.3.2.ebuild:
  Version bump

  15 Mar 2009; Robin H. Johnson <robbat2@gentoo.org>
  actionmailer-2.1.2.ebuild:
  Fix slot conflict: =dev-ruby/actionpack-2.1.2 required by ('installed',
  '/', 'dev-ruby/actionmailer-2.1.2', 'nomerge')

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> actionmailer-2.2.2.ebuild:
  ia64 stable wrt #253425

  09 Jan 2009; Brent Baude <ranger@gentoo.org> actionmailer-2.2.2.ebuild:
  Marking actionmailer-2.2.2 ppc for bug 253425

  07 Jan 2009; Ferris McCormick <fmccor@gentoo.org>
  actionmailer-2.2.2.ebuild:
  Sparc stable, Bug #253425.

  07 Jan 2009; Brent Baude <ranger@gentoo.org> actionmailer-2.2.2.ebuild:
  Marking actionmailer-2.2.2 ppc64 for bug 253425

  04 Jan 2009; Markus Meier <maekke@gentoo.org> actionmailer-2.2.2.ebuild:
  amd64/x86 stable, bug #253425
